--- a/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
+++ b/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
@@ -393,10 +393,7 @@
    "outputs": [],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -411,17 +408,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['notion',\n",
+       " 'lambda',\n",
+       " 'function',\n",
+       " 'goes',\n",
+       " 'back',\n",
+       " 'origin',\n",
+       " 'computer',\n",
+       " 'science']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
+    "list1=['the', 'notion', 'of', 'a', 'lambda', 'function', 'goes', 'all', 'the', 'way', 'back', 'to', 'the' ,'origin', 'of', 'computer', 'science']\n",
     "\n",
-    "\n",
+    "shorter = list(filter(lambda x: x if len(x) >= 4 else None , list1))\n",
+    "shorter\n",
     "\n"
    ]
   },
@@ -464,16 +477,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 35.97387961  99.13294268  92.6178302   99.69549478  63.21119535\n",
+      "  73.90387697  95.50028838  99.21476553  36.98251238 101.45813729\n",
+      " 100.5917418   89.38159435  89.52156589  83.8084752   28.37990868\n",
+      "  68.75395211  45.86132067  36.58307493  56.32208365  33.96219302\n",
+      "  45.29071318  74.86289938  66.51091383  88.19316186  94.26635864\n",
+      "  46.83131624 109.60744472 109.68427993  44.55796499  92.84146259]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(55555)\n",
+    "temperatures = np.random.uniform(25,110,30)\n",
+    "print(temperatures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[35.97387961379455, 63.211195349983264, 73.90387696517755, 36.982512376595906, 68.75395211338406, 45.86132066984196, 36.58307493022292, 56.322083650154724, 33.9621930206693, 45.29071317816652, 74.86289938282341, 66.51091382521807, 46.831316244170544, 44.55796498523391]\n"
+     ]
+    }
+   ],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
+    "x= list(filter(lambda temp: temp if temp > 32 else None , temperatures))\n",
+    "y= list(filter(lambda temp: temp if temp < 80 else None , x))\n",
     "\n",
+    "print(y)\n",
     "\n",
     "\n"
    ]
@@ -519,18 +564,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[17 97]\n",
+      " [22 33]\n",
+      " [37 46]\n",
+      " [57 28]\n",
+      " [11 25]\n",
+      " [14  2]\n",
+      " [74 16]\n",
+      " [12 37]\n",
+      " [35 21]\n",
+      " [66 65]\n",
+      " [86 58]\n",
+      " [67 81]\n",
+      " [ 0 48]\n",
+      " [28 66]\n",
+      " [76 22]\n",
+      " [46 47]\n",
+      " [64  7]\n",
+      " [88 94]\n",
+      " [65 13]\n",
+      " [75 89]\n",
+      " [23 17]\n",
+      " [36 63]\n",
+      " [62 36]\n",
+      " [64 17]\n",
+      " [18 19]\n",
+      " [88 41]\n",
+      " [21 49]\n",
+      " [98 36]\n",
+      " [81 73]\n",
+      " [62 90]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Código de solución \n",
-    ".\n",
-    ".\n",
-    ".\n",
-    ".\n",
-    "\n",
-    "\n",
+    "np.random.seed(55555)\n",
+    "point_xy = np.random.randint(0,100,[30,2])\n",
+    "print(point_xy)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.minimum.reduce(point_xy)"
    ]
   }
  ],
@@ -550,7 +649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
