--- a/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
+++ b/TAREA2.SPF_RVL_Gerardo_NV_Dayana.ipynb
@@ -179,8 +179,6 @@
     }
    ],
    "source": [
-    "# Código de solución \n",
-    "\n",
     "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
     "           [\"98762\", \"Programming Python, Mark Lutz\", 5, 56.80], \n",
     "           [\"77226\", \"Head First Python, Paul Barry\", 3,32.95],\n",
@@ -190,7 +188,8 @@
     "costo = [4*40.95, 5*56.80, 3*32.95, 3*24.99]\n",
     "costo_total= list(map(lambda x: x + 10 if x<100 else x, costo))\n",
     "num =list(map(lambda x,y:(x[0],y),orders,costo_total))\n",
-    "num\n"
+    "num\n",
+    "\n"
    ]
   },
   {
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +272,7 @@
        " [4, 502.57]]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +291,8 @@
     "\n",
     "sol2 = list(map(lambda x: [x[0]] + \n",
     "               [reduce(lambda x,y: x+y, x[1:])], sol1))\n",
-    "sol2\n"
+    "sol2\n",
+    "\n"
    ]
   },
   {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -429,14 +429,12 @@
     "E3= pd.DataFrame(E3)\n",
     "E3=E3.append(E2)\n",
     "print(E3)\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
